--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -47,6 +47,20 @@ endif()
 
 cc_binary(
   NAME 
+    benchmark_test
+  SRCS 
+    benchmark_test.cpp
+  DEPS
+    :engine
+    torch
+    absl::strings
+    gflags::gflags
+    glog::glog
+    Python::Python
+)
+
+cc_binary(
+  NAME 
     scalellm
   SRCS 
     main.cpp
